src/App.css
/* ! ==========> Z-index > 3 <========== */

html,
body {
  overflow-x: hidden !important;
  scroll-behavior: smooth;
}

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}
/*
.background,
.foreground {
  height: 100%;
  width: 100%;
   position: absolute;
  top: 0;
  left: 0;
  overflow: auto;

  overflow:hidden;
}
 */
/* ?Try this */
::-webkit-scrollbar {
  width: 0;
  height: 0;
}
.background {
  position: relative;
  background: rgb(255, 255, 255);
  overflow: hidden;
}
.background2 {
  overflow: hidden;
  background: -moz-radial-gradient(
    circle,
    rgba(46, 49, 78, 1) 0%,
    rgba(0, 0, 0, 1) 100%
  );
  background: -webkit-radial-gradient(
    circle,
    rgba(46, 49, 78, 1) 0%,
    rgba(0, 0, 0, 1) 100%
  );
  background: radial-gradient(
    circle,
    rgba(46, 49, 78, 1) 0%,
    rgba(0, 0, 0, 1) 100%
  );
  position: relative;
}

.foreground {
  z-index: 10;
  position: relative;
}
.glass {
  /* ?Try this */
  background: rgb(255, 255, 255);
  background: linear-gradient(
    135deg,
    rgba(255, 255, 255, 0.1) 0%,
    rgba(255, 255, 255, 0.2) 100%
  );
  backdrop-filter: blur(12px);
  -webkit-backdrop-filter: blur(12px);
  position: relative;
  margin: 100px 50px 50px 50px;
  border: 2px solid rgba(255, 255, 255, 0.7);
  /* ?Try this */
  border-radius: 20px;
  /* overflow-y: visible; */
  box-shadow: 10px 4px 32px -20px;
  height: max-content;
  overflow: hidden;
}
.glass2 {
  background: rgb(255, 255, 255);
  background: linear-gradient(
    135deg,
    rgba(107, 107, 107, 0.3) 0%,
    rgba(0, 0, 0, 0.2) 0%
  );
  backdrop-filter: blur(12px);
  -webkit-backdrop-filter: blur(12px);

  position: relative;

  margin: 100px 50px 50px 50px;

  border: 2px solid rgba(255, 255, 255, 0.2);

  border-radius: 20px;
  height: max-content;
  overflow: hidden;
}

a,
a:hover {
  text-decoration: none;
}
.card {
  border-radius: 20px;
}
.back {
  overflow-x: hidden;
}

/* !================= Elements =================! */

#btn {
  font-family: "Zilla Slab", serif;
  font-size: 1rem;
  width: 10rem;
  height: 35px;

  background: linear-gradient(
    90deg,
    rgba(222, 72, 255, 1) 0%,
    rgba(255, 152, 80, 1) 100%
  );
  border-radius: 2rem;
  border: none;
  -webkit-transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
  transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
  will-change: transform;
  color: #fafafa;
}
#btn:hover {
  transform: scale(1.1);
}

#collapseNav {
  -webkit-transition: all 1s cubic-bezier(0.68, -0.55, 0.265, 2.55);
  transition: all 0.7s cubic-bezier(0.68, -0.55, 0.265, 2.55);
  will-change: transform;
}

/* !================= Blurred elements =================! */

.circle1,
.circle2,
.circle3 {
  position: absolute;
  height: 40rem;
  width: 40rem;

  border-radius: 50%;

  filter: blur(32px);
}
.circle1 {
  top: -10%;
  left: -30%;
  background: rgb(140, 48, 255);
  background: rgb(160, 70, 180);
  background: linear-gradient(
    135deg,
    rgba(160, 70, 180, 1) 0%,
    rgba(249, 222, 255, 1) 100%
  );
}

.circle2 {
  left: 80%;
  top: 60%;
  background: rgb(246, 255, 203);
  background: linear-gradient(
    135deg,
    rgba(246, 255, 203, 1) 0%,
    rgba(170, 200, 30, 1) 100%
  );
}

.circle3 {
  top: 90%;
  left: -10%;
  height: 30rem;
  width: 30rem;
  background: rgb(207, 246, 255);
  background: linear-gradient(
    135deg,
    rgba(207, 246, 255, 1) 0%,
    rgba(34, 187, 224, 1) 100%
  );
}

.circle3hide {
  visibility: hidden;
}

.circle1hide {
  position: absolute;
  height: 800px;
  width: 100vw;
  top: -13%;
  border-radius: 50%;
  background: linear-gradient(53deg, #6366f1, #57ffb9);
  /*  background: rgb(97, 100, 255);
  background: -moz-linear-gradient(
    135deg,
    rgba(97, 100, 255, 1) 0%,
    rgba(255, 72, 142, 1) 100%
  );
  background: -webkit-linear-gradient(
    135deg,
    rgba(97, 100, 255, 1) 0%,
    rgba(255, 72, 142, 1) 100%
  );
  background: linear-gradient(
    135deg,
    rgba(97, 100, 255, 1) 0%,
    rgba(255, 72, 142, 1) 100%
  ); */

  /*  background-size: 400% 400%; */
  /*  animation: ChangeColor 10s ease-in-out infinite; */
  filter: blur(45px);
}
/* @keyframes ChangeColor {
  0% {
    background-position: 0% 84%;
  }
  50% {
    background-position: 100% 17%;
  }
  100% {
    background-position: 0% 84%;
  }
} */

.circle2hide {
  position: absolute;
  height: 70vh;
  width: 60vw;
  top: 35%;
  right: -50%;
  border-radius: 50%;
  background: #03001e; /* fallback for old browsers */
  background: -webkit-linear-gradient(
    to right,
    #ec38bc,
    #7303c0,
    #03001e
  ); /* Chrome 10-25, Safari 5.1-6 */
  background: linear-gradient(
    54deg,
    rgba(236, 56, 188, 1),
    rgba(115, 3, 192, 0.6),
    rgba(3, 0, 30, 1)
  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */

  /* background: linear-gradient(53deg, #f1636a, #57ffb9); */
  /* background-size: 400% 400%; */
  animation: ChangeColor 10s ease-in-out infinite;
  filter: blur(20px);
}

/* ! ==========> khush <========== */

.container_main {
  width: 100%;
  height: 100%;
}
@media (max-width: 768px) {
  .glass {
    margin: 0;
    padding-top: 8vh;
    border: none;
  }
  .glass2 {
    margin: 0;
    padding-top: 8vh;
    border: none;
  }
  .circle1 {
    top: -2%;
    left: -10%;
    height: 15em;
    width: 15em;
  }
  .background {
    position: relative;
    overflow-x: hidden;
  }
  .toTopButton {
    bottom: 10px;
    right: 10px;
  }
}

@media (max-width: 340px) {
  .upIcon {
    position: absolute;
    top: 10;
    left: 10;
    width: 100%;
    height: 100%;
    z-index: 1;
  }
}

/* !===To Top Button===! */

.toTopButton {
  height: 60px;
  width: 60px;
  border-radius: 50%;
  background-color: #f498fe;
  /* backdrop-filter: blur(5rem);
  -webkit-backdrop-filter: blur(5rem); */
  position: fixed;
  bottom: 40px;
  right: 50px;
  z-index: 14;
  transition: 700ms ease-in-out;
  cursor: pointer;
}

.upIcon {
  width: 50%;
  height: 50%;
  padding: 17.5px !important;
  position: absolute;
}

Link {
  scroll-behavior: smooth;
}

.nlink {
  text-decoration: underline;
  color: rgb(170, 18, 137);
}

